--- a/config.example.yaml
+++ b/config.example.yaml
@@ -22,6 +22,10 @@ training:
   seed: 42
   amp: true
   eval_map_every: 1  # compute COCO mAP every N epochs (0 to disable)
+  transforms:
+    resize:
+      min_size: 800
+      max_size: 1333
 
 # Model
 model:
