fix(train,data): handle images with zero annotations (empty boxes as (0,4)); switch AMP to torch.amp API

--- a/torch-pipeline/config.example.yaml
+++ b/torch-pipeline/config.example.yaml
@@ -30,7 +30,7 @@ training:
 # Model
 model:
   name: "fasterrcnn_resnet50_fpn_v2"
-  pretrained: true
+  pretrained: no
   num_classes: 2  # background + whale
 
 # Checkpointing / logging
