--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-torch>=2.0.0
-torchvision>=0.15.0
+torch>=2.2.0
+torchvision>=0.17.0
 pycocotools>=2.0.7
 opencv-python>=4.8.0
 numpy>=1.23
-Pillow>=9.5
-tqdm>=4.66.0
+Pillow>=10.0.0
+tqdm>=4.65.0
 pyyaml>=6.0
+matplotlib>=3.7.0
