--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
-torch>=2.2.0
-torchvision>=0.17.0
+--index-url https://download.pytorch.org/whl/cu128
+torch==2.9.1
+torchvision==0.24.1
+torchaudio==2.9.1
+
 pycocotools>=2.0.7
 opencv-python>=4.8.0
 numpy>=1.23
